--- a/build.gradle
+++ b/build.gradle
@@ -22,17 +22,28 @@ repositories {
 }
 
 dependencies {
+    //spring boot jpa
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-security'
+
+    //security 세큐리티 입니다 이거 주석 해제시 해시맵으로 로그인해야하니 주의
+  //  implementation 'org.springframework.boot:spring-boot-starter-security'
+    //thymeleaf
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    //web
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    //validation
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
+    //lombok
     compileOnly 'org.projectlombok:lombok'
+    //devtools
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
+    //mysql
     runtimeOnly 'com.mysql:mysql-connector-j'
+
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.springframework.security:spring-security-test'
+    //security test 세큐리티 테스트입니다 당분간 주석처리 하겠습니다.
+   // testImplementation 'org.springframework.security:spring-security-test'
 }
 
 tasks.named('test') {
