--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,9 @@ dependencies {
 
     implementation 'org.modelmapper:modelmapper:3.2.0'
 
+    //jquery
+    implementation 'org.webjars.bower:jquery:3.7.1'
+
 
 }
 
