--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ plugins {
 
 group = 'org.crm'
 version = '0.0.1-SNAPSHOT'
+def queryDslVersion = '5.0.0'
 
 java {
     sourceCompatibility = '17'
@@ -22,7 +23,7 @@ repositories {
 }
 
 dependencies {
-    //  Spring boot 설정
+    //  Spring boot 설정////////  sdasd
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -56,15 +57,41 @@ dependencies {
     //security test 세큐리티 테스트입니다 당분간 주석처리 하겠습니다.
     // testImplementation 'org.springframework.security:spring-security-test'
 
+    // modelmapper
     implementation 'org.modelmapper:modelmapper:3.2.0'
 
-    //Swagger UI
+    // Swagger UI
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
 
+    // thumbnail
+    implementation 'net.coobird:thumbnailator:0.4.20'
 
+    // QueryDsl
+    // 필수
+    implementation "com.querydsl:querydsl-jpa:${queryDslVersion}:jakarta"
+    implementation "com.querydsl:querydsl-core:${queryDslVersion}"
+
+    // QueryDsl 쿼리 타입 생성 (QClass 생성 시 @Entity 탐색)
+    annotationProcessor "com.querydsl:querydsl-apt:${queryDslVersion}:jakarta"
+
+    // java.lang.NoClassDefFoundError:javax/persistence/Entity 에러 방지
+    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+
+    // compile 정리
+    compileJava.dependsOn('clean')
 
 }
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+// querydsl 경로 설정
+sourceSets {
+    main {
+        java {
+            srcDirs = ["$projectDir/src/main/java","$projectDir/build/generated"]
+        }
+    }
 }
